更新rabbitmq,mysql,redis,config_file

--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     "sources": [
       {
         "name": "demo",
+        "annotation": "业务",
         "driver": "mysql",
         "dsn": "admin:123456@tcp(127.0.0.1:3306)/test?parseTime=true&loc=Local",
         "max_idle_conn": 10,
@@ -29,6 +30,7 @@
     "sources": [
       {
         "name": "demo",
+        "annotation": "业务",
         "addr": "127.0.0.1:6379",
         "pwd": "123456",
         "db": 0,
@@ -39,15 +41,27 @@
   "rabbitmq": {
     "namespace": "rabbitmq",
     "pkg": "rabbitmq",
-    "gen_producer_code": true,
     "gen_consumer_code": true,
-    "sources": [
-      {
-        "name": "demo",
-        "url": "amqp://admin:123456@127.0.0.1:5672",
-        "topic": "gift_topic",
-        "queue": "gift"
-      }
-    ]
+    "gen_publisher_code": true,
+    "sources": {
+      "publishers": [
+        {
+          "name": "demo",
+          "annotation": "业务",
+          "url": "amqp://admin:123456@127.0.0.1:5672",
+          "queue": "gift",
+          "exchange": "gift_topic"
+        }
+      ],
+      "consumers": [
+        {
+          "name": "demo",
+          "annotation": "业务",
+          "url": "amqp://admin:123456@127.0.0.1:5672",
+          "queue": "gift",
+          "exchange": "gift_topic"
+        }
+      ]
+    }
   }
 }
